[gd_scene load_steps=17 format=2]

[ext_resource path="res://Wallnode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/arts/dragon.png" type="Texture" id=3]
[ext_resource path="res://assets/arts/square.png" type="Texture" id=4]
[ext_resource path="res://assets/arts/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/arts/The Way of Thaw.ogg" type="AudioStream" id=6]
[ext_resource path="res://World.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="InputEventAction" id=6]
action = "start_button"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103, 78.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.875, 84.6875 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;
// Background Noise

uniform mat2 _rot = mat2( vec2(0.5, 0.86), vec2(-0.86, 0.5));
uniform float _speed = 1.1;
uniform float _gradation : hint_range(0, 2) = 0.5;

float wave(vec2 p) {
    float v = sin(p.x+sin(p.y) + sin(p.y*.43));
    return v*v;
}

float map(float time, vec2 p) {
    float v = 0.0;
    v += wave(p);
    p.x += time * _speed;
    p = p * _rot;
    v += wave(p);
    p.x += time * _speed * .17;
    p = p * _rot;
    v += wave(p);
    v = abs(1.5 - v);

    return v;
}

void fragment()
{
    vec2 resolution = 1.0 / SCREEN_PIXEL_SIZE;
    vec2 uv = (FRAGCOORD.xy * 2.0 - resolution.xy) / min(resolution.x, resolution.y);
    vec2 p = normalize(vec3(uv.xy, 2.3)).xy * 10.0;
    p.y += TIME * _speed * 0.3;
    float v=map(TIME, p);
    
    COLOR = vec4((v * .7 + texture(SCREEN_TEXTURE,SCREEN_UV).r) / 2.0, (v * .3 + texture(SCREEN_TEXTURE,SCREEN_UV).g) / 2.0, (v * 0.49 + texture(SCREEN_TEXTURE,SCREEN_UV).b / 2.0), _gradation);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/_rot = Transform2D( 0.5, -0.86, 0.86, 0.5, 0, 0 )
shader_param/_speed = 1.1
shader_param/_gradation = 0.5

[node name="World" type="Node2D"]
script = ExtResource( 8 )
wallScene = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
margin_left = -80.0
margin_top = -296.0
margin_right = 72.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 4 )
text = "0


"
align = 1

[node name="StartButton" type="Button" parent="CanvasLayer"]
margin_left = -96.0
margin_top = 104.0
margin_right = 84.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Start"

[node name="PlayerNode" type="Node2D" parent="."]
position = Vector2( 1, 1 )

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
position = Vector2( -1, 15 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
position = Vector2( 0, -0.999969 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
position = Vector2( -1, 16 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="AudioStreamPlayer" parent="PlayerNode/Player"]
stream = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0823529, 0.0705882, 0.396078, 1 )
material = SubResource( 11 )
position = Vector2( 1, 1 )
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="WallTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="hit" from="PlayerNode/Player" to="." method="game_over"]
[connection signal="hit" from="PlayerNode/Player" to="." method="_on_Player_hit"]
[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="timeout" from="WallTimer" to="." method="_on_WallTimer_timeout"]
